@@ -1,4 +1,14 @@
-Sat May 19 13:46:36 EEST 2007  Pekka Riikonen <priikone@silcnet.org>
+Sat May 19 14:46:36 EEST 2007  Pekka Riikonen <priikone@silcnet.org>
+
+	* Fixed passphrase authentication with server.  Affected file
+	  is lib/silcclient/client_connect.c.
+
+	* Fixed passphrase authentication as responder.  Affected file is
+	  lib/silcske/silcconnauth.c.
+
+	* Changed SilcAskPassphrase and SilcGetAuthMeth callbacks to
+	  return data as const.  Affected file is
+	  lib/silcclient/silcclient.h.
 
 	* Fixed timeout calculation in Symbian scheduler.  Affected
 	  file is lib/silcutil/symbian/silcsymbianscheduler.c.
